tests/test_io/bad/output/forgot_input.catala_en.Typecheck
[ERROR] This subscope variable is a mandatory input but no definition was provided.

Incriminated subscope:
 --> tests/test_io/bad/forgot_input.catala_en
  | 
9 |   a scope A
  |   ^
  + Test

Incriminated variable:
 --> tests/test_io/bad/forgot_input.catala_en
  | 
6 |   input x content integer
  |         ^
  + Test
